# nonebot-plugin-pxchat

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_pxchat/: __init__.py  chat.py  context.py  manager.py
src/nonebot_plugin_pxchat/: __init__.py  chat.py  commands.py  config.py  context.py  image2txt.py  manager.py  mcp_manager.py  send2root.py
