[project]
name = "nonebot-plugin-pxchat"
version = "1.0.1"
description = "基于AI大模型的聊天机器人，支持大模型api任意切换、上下文记忆、群聊智能参与、图片识别、MCP等功能"
readme = "README.md"
authors = [{ name = "whopxx", email = "2074447320@qq.com" }]
urls = { Repository = "https://github.com/whopxxx/nonebot-plugin-pxchat" }
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.4.3,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "openai>=2.2.0",
    "mcp>=1.16.0",
    "nonebot-plugin-localstore>=0.7.3",
]

[tool.nonebot]
plugins = ["nonebot_plugin_pxchat", "nonebot_plugin_localstore"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "nonebot2[fastapi]>=2.4.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
